--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: "norse-bold";
+    src: 
+        url("fonts/norse-bold-webfont.woff2"),
+        url("fonts/norse-bold-webfont.woff");
+}
+
 :root {
     --main-clr: #596D48;
     --input-fcs-clr: #000;
