--- a/style.css
+++ b/style.css
@@ -82,17 +82,17 @@
 }
 
 #odin-logo{
-    height: 8em;
+    height: 8rem;
 }
 
 #logo-text {
     font-family: "norse-bold";
-    font-size: 6em;
+    font-size: 6rem;
 }
 
 #sign-up-form {
     height: 100vh;
-    width: 76vw;
+    width: 100%;
 }
 
 #header, #footer {
@@ -105,7 +105,8 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: baseline;
-    padding: 5rem 0 0 3rem;
+    padding: 5rem 5rem 0 3rem;
+    width: 100%
 }
 
 #input-form {
@@ -141,4 +142,44 @@ label {
     flex-direction: column;
     padding: 1.5rem 0 0 3rem;
     align-items: start;
+}
+
+label {
+    font-size: 14px;
+    margin: 0px !important;
+}  
+
+input {
+    font-size: 16px;
+    border: solid #E5E7EB;
+    border-radius: 5px;
+}
+
+input:required {
+    border-color: var(--required-border-clr);
+}
+
+input:valid {
+    border: solid var(--valid-input-clr);
+}
+
+input:invalid {
+    border-color: var(--invalid-input-clr);
+}
+
+input:focus {
+    box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+}
+
+button {
+    color: #FFFFFF;
+    background-color: var(--main-clr);
+    border-color: var(--main-clr);
+    border-radius: 10px;
+    padding: .5rem 2.5rem;
+}
+
+a {
+    color: var(--main-clr);
+    font-weight:700;
 }
